# Robot_in_maze

./: CMakeLists.txt  old_package.xml  package.xml  readme.md  setup.py
autonomous_robot_pkg/: CMakeLists.txt  package.xml
autonomous_robot_pkg/config/: city_map.pgm  city_map.yaml
autonomous_robot_pkg/include/autonomous_robot_pkg/: tb_key_control.hpp
autonomous_robot_pkg/launch/: city.launch.py  hotel_waiter.launch.py  mapping.launch.py  maze_navigation.launch copy.py  maze_navigation.launch.py  robot_control.launch.py  rover.launch.py  tb3_world_navigation.launch.py
autonomous_robot_pkg/models/rover/: rover_diff_drive_controller.yaml  rover_model.xacro
autonomous_robot_pkg/scripts/: maze_random_generate.py  maze_solver.py  occupancy_grid_pub.py
autonomous_robot_pkg/src/: tb_key_control.cpp
autonomous_robot_pkg/urdf/: rover.xarco
autonomous_tb3/: maze_solver.py  readme.md  setup.py
autonomous_tb3/autonomous_tb3/: maze_random_generate.py  path_follower.py
autonomous_tb3/config/: follow_custom_path.xml  random_maze.pgm  random_maze.yaml
autonomous_tb3/launch/: maze_navigation.launch.py
autonomous_tb3/world/random_maze/: model.sdf
config/: city_map_1.pgm
fwd_bot/: CMakeLists.txt  package.xml
fwd_bot/fwd_bot_model/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
fwd_bot/include/fwd_bot/: rover_drive_plugin.hpp
fwd_bot/launch/: launch_sim.launch.py  rsp.launch.py
fwd_bot/src/: rover_drive_plugin.cpp
gazebo_models_worlds_collection/worlds/: small_city.world
include/: tb_key_control.hpp
include/autonomous_tb3/: tb_key_control.hpp
keyboard_handle_pkg/keyboard_msgs/: CMakeLists.txt
launch/: city.launch.py  hotel_waiter.launch.py  mapping.launch.py  maze_navigation.launch copy.py  maze_navigation.launch.py  robot_control.launch.py  tb3_world_navigation.launch.py
scripts/: spawn_entity.py
src/: tb_key_control.cpp
