<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autonomous_robot_pkg</name>
    <version>0.1.0</version>
    <description>Autonomous TurtleBot3 with mixed C++ and Python nodes</description>

    <maintainer email="71frukt@mail.ru">frukt</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>turtlebot3_gazebo</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>keyboard_msgs</depend>
    <depend>keyboard</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>